tests/ui/attributes/optimize.stderr
error: attribute should be applied to function or closure
  --> $DIR/optimize.rs:6:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/optimize.rs:3:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: attribute should be applied to function or closure
  --> $DIR/optimize.rs:10:5
   |
LL |     #[optimize(speed)]
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

